# modern-lakehouse

./: README.md  docker-compose.yaml
k8s/minio/: statefulset.yaml
pystocks/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  workspace.yaml
pystocks/pystocks/: main.py
pystocks/stocks/: __init__.py  jobs.py  repo.py  repository.py
scripts/: deploy.sh
